src/test/deca/context/valid/notYetImplemented/test_pass_1_enrichissement_env_type.deca
// Description:
//    Program testing pass 1, enrichisment type environment
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test{
    
}

{
    Test newType = new Test();
}
