src/test/deca/context/invalid/test_pass_1_object_already_exist.deca
// Description:
//    Program testing pass 1, object already exist
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test{
    
}

class Test{
    
}
